--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 body {
 font-family: Verdana, Arial, "Trebuchet MS", Sans-Serif, Georgia, Courier, "Times New Roman", Serif;
 font-size: 12px; 
-background: #346083 url(images/bg.jpg) no-repeat center top;
+background: #300 no-repeat center top;
 color: #300; 
 margin:0; 
 padding:0;
