--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ ul { list-style-type: none; }
 
 #page {
 width: 800px;
-margin: 20px auto 10px auto;
+margin:10% auto 10% auto;
 }
 
 #header {          
